--- a/CSS/01-CSS選擇器/01-基礎選擇器.html
+++ b/CSS/01-CSS選擇器/01-基礎選擇器.html
@@ -5,16 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        /* 選擇器{樣式} */
-
         p {
-            color: #bd1c1c;
-            font-size: 20px;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            color: rgb(49, 231, 207);
         }
+
+        div {
+            color: pink;
+        }
+
     </style>
 </head>
 <body>
-    <p>有點意思</p>
+    <h1>透過標籤名來選擇</h1>
+    <p>男生</p>
+    <p>男生</p>
+    <p>男生</p>
+    <div>女生</div>
+    <div>女生</div>
+    <div>女生</div>
 </body>
 </html>
