--- a/CSS/02-CSS字體設置/02-字體傾斜.html
+++ b/CSS/02-CSS字體設置/02-字體傾斜.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        /* 選擇器{樣式} */
-
         p {
-            color: #bd1c1c;
-            font-size: 20px;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-style: italic;
+        }
+
+        em {
+            font-style: normal;
         }
     </style>
 </head>
 <body>
-    <p>有點意思</p>
+    <p>字體設置傾斜</p>
+
+    <em>讓斜體標籤部傾斜</em>
+
 </body>
 </html>
