--- a/CSS/00-CSS體驗/01-體驗CSS.html
+++ b/CSS/00-CSS體驗/01-體驗CSS.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         /* 選擇器{樣式} */
-
+        /*正式場合需要額外將CSS拉出去寫*/
         p {
             color: #bd1c1c;
             font-size: 20px;
