--- a/CSS/02-CSS字體設置/01-設置字體樣式.html
+++ b/CSS/02-CSS字體設置/01-設置字體樣式.html
@@ -9,7 +9,7 @@
 <style>
     * {
         padding: 5px;
-        font-family: 'KaiTi';
+        font-family: 'KaiTi'; /*設置字體樣式*/
     }
 
     div {
