--- a/CSS/02-CSS字體設置/02-字體傾斜.html
+++ b/CSS/02-CSS字體設置/02-字體傾斜.html
@@ -6,15 +6,16 @@
     <title>Document</title>
     <style>
         p {
-            font-style: italic;
+            font-style: italic; /*斜體*/
         }
 
         em {
-            font-style: normal;
+            font-style: normal;/*正體*/
         }
     </style>
 </head>
 <body>
+
     <p>字體設置傾斜</p>
 
     <em>讓斜體標籤部傾斜</em>
