--- a/CSS/01-CSS選擇器/09-(進階)並集選擇器.html
+++ b/CSS/01-CSS選擇器/09-(進階)並集選擇器.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+    /* 要求讓熊大雨雄二改成紅色 */
+    div,
+    p {
+        background-color: black;
+        color: red;
+    }
+
+    /* 要求讓熊大與雄二還有小豬一家改成黃色 */
+    div,
+    p,
+    .pig {
+        background-color: blue;
+        color: yellow;
+    }
+    
+    </style>
 </head>
 <body>
-    
+    <img src="images/03.png" >
+
+    <div>雄大</div>
+    <p>雄二</p>
+    <span>光頭強</span>
+    <ul class="pig">
+        <li>value1</li>
+        <li>value2</li>
+        <li>value3</li>
+    </ul>
 </body>
 </html>
