--- a/CSS/01-CSS選擇器/10-(進階)鏈結偽裝類選擇器.html
+++ b/CSS/01-CSS選擇器/10-(進階)鏈結偽裝類選擇器.html
@@ -28,9 +28,11 @@
     </style>
   </head>
   <body>
-        <img src="images/04.png">
-        <h1>注意：如果有要使用多個不同的偽連結,需要遵守建立順序,不然容易造成失效</h1>
-        <div><img src="images/05.png" ></div>
-        <a href="#">偽裝連結 link</a>
+    <img src="images/04.png" />
+    <h1>
+      注意：如果有要使用多個不同的偽連結,需要遵守建立順序,不然容易造成失效
+    </h1>
+    <div><img src="images/05.png" /></div>
+    <a href="#">偽裝連結 link</a>
   </body>
 </html>
