--- a/CSS/01-CSS選擇器/10-(進階)鏈結偽裝類選擇器.html
+++ b/CSS/01-CSS選擇器/10-(進階)鏈結偽裝類選擇器.html
@@ -25,6 +25,16 @@
       a:active {
         color: black;
       }
+
+      li {
+        color: #000;
+      }
+
+      li:hover {
+        font-size: 50px;
+        color: rgb(216, 36, 36);
+      }
+
     </style>
   </head>
   <body>
@@ -34,5 +44,29 @@
     </h1>
     <div><img src="images/05.png" /></div>
     <a href="#">偽裝連結 link</a>
+
+    <ul>
+      <li>hello1</li>
+      <li>hello2</li>
+      <li>hello3</li>
+      <li>hello4</li>
+      <li>hello5</li>
+      <li>hello6</li>
+      <li>hello7</li>
+      <li>hello8</li>
+      <li>hello9</li>
+      <li>hello10</li>
+      <li>hello11</li>
+      <li>hello12</li>
+      <li>hello13</li>
+      <li>hello14</li>
+      <li>hello15</li>
+      <li>hello16</li>
+      <li>hello17</li>
+      <li>hello18</li>
+      <li>hello19</li>
+      <li>hello20</li>
+    </ul>
+
   </body>
 </html>
